--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,12 +1,51 @@
+/* soft reset do css */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
     background-image: url(https://image.freepik.com/vetores-gratis/ilustracao-em-vetor-futurista-3d_73458-361.jpg);
     background-size: auto 225vh;
     font-family: Arial;
     height: 100vh;
+    font-size: 12px;
   }
+
+  /* se a tela tiver pelomenos 400px vai carregar estes estilos */
+@media (min-width: 400px) {
+  body {
+    font-size: 14px;
+  }
+}
+
+/* breakpoint*/
+@media (min-width: 600px) {
+  body {
+    font-size: 18px;
+  }
+}
+
+/* breakpoint*/
+@media (min-width: 1200px) {
+  body {
+    font-size: 20px;
+  }
+}
+
+header {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
   
   .menu {
     background-image: url(http://images.gofreedownload.net/2/solid-triangle-background-58967.jpg);
+    position: fixed;
+    width: 100vw;
+    top: 0;
   }
   .menu ul {
     display: flex;
@@ -15,6 +54,11 @@ body {
   
   .menu li {
     list-style: none;
+  }
+
+  .menu a {
+    display: block;
+    padding: 10px 20px;    
   }
   
   a {
@@ -30,8 +74,17 @@ body {
     color: whitesmoke;
     text-align: center;
   }
+
+  .site-title {
+    font-size: 4em;
+  }
   
   .site-subtitle {
     font-style: italic;
   }
-  
+
+  .img-portfolio {
+    height: 180px;
+    width: 180px;
+  }
+
